Right-align the issues buttons in the CS header

--- a/src/main/resources/assets/styles/publish/issue-button.less
+++ b/src/main/resources/assets/styles/publish/issue-button.less
@@ -1,69 +1,77 @@
-.show-issues-dialog-button {
-  position: relative;
-  background-color: transparent;
+.show-issues-button-wrapper {
+
+  width: 100%;
+  margin-right: 40px;
   display: flex;
-  margin: 0 auto;
-  justify-content: center;
-  z-index: 1;
-  height: @app-header-height;
-  line-height: @app-header-height;
-  color: @admin-white;
+  justify-content: flex-end;
+  align-items: center;
 
-  span:first-child {
-    margin-left: 10px;
-    font-size: 14px;
-    line-height: @app-header-height;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-
-  &:before {
-    font-size: 20px;
-    line-height: @app-header-height - 1;
-  }
-
-  &:hover {
-
-    &:not(:disabled) {
-      background-color: transparent;
-    }
-    span, &:before {
-      color: darken(@admin-white, 10%) !important;
-    }
-  }
-
-  .issue-count {
-    display: none;
-    position: absolute;
-    text-align: center;
-    color: @admin-white;
-    top: 8px;
-    left: 30px;
-    width: 12px;
-    height: 12px;
-    padding: 2px;
-    line-height: 12px;
-    border-radius: 14px;
-    font-size: 11px;
+  .show-issues-dialog-button {
+    position: relative;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
     z-index: 1;
-  }
+    color: @admin-white;
+    border-right: 1px solid @admin-white;
 
-  &.has-assigned-issues, &.has-issues {
-    .issue-count {
-      display: inline-block;
+    span:first-child {
+      margin-left: 10px;
+      font-size: 14px;
+      line-height: 25px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
     }
-  }
 
-  &.has-assigned-issues .issue-count {
-    background: @admin-red;
-  }
+    &:before {
+      font-size: 20px;
+      line-height: 24px;
+    }
 
-  &.has-issues .issue-count {
-    background: @admin-blue;
-  }
+    &:hover {
 
-  .icon-signup();
+      &:not(:disabled) {
+        background-color: transparent;
+      }
+      span, &:before {
+        color: darken(@admin-white, 10%) !important;
+      }
+    }
+
+    .issue-count {
+      display: none;
+      position: absolute;
+      text-align: center;
+      color: @admin-white;
+      top: 0;
+      left: 30px;
+      width: 12px;
+      height: 12px;
+      padding: 2px;
+      line-height: 12px;
+      border-radius: 14px;
+      font-size: 11px;
+      z-index: 1;
+    }
+
+    &.has-assigned-issues, &.has-issues {
+      .issue-count {
+        display: inline-block;
+      }
+    }
+
+    &.has-assigned-issues .issue-count {
+      background: @admin-red;
+    }
+
+    &.has-issues .issue-count {
+      background: @admin-blue;
+    }
+
+    .icon-signup();
+
+  }
 
 }
 
@@ -76,15 +84,12 @@
 
   .show-issues-dialog-button {
 
-    margin: 0;
-    margin-right: 35px;
-
     span:first-child {
       display: none;
     }
 
     .issue-count {
-      left: 26px;
+      left: 30px;
     }
   }
 }
